Update microG to 0.2.27